# pipecat-quickstart

./: .attendee_bots.json  attendee_connect.py  attendee_manage.py  bot.py  pyproject.toml  voice_bridge.py
client/: package.json  pnpm-lock.yaml
client/src/: index.tsx
