[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,silero,deepgram,openai,cartesia,runner,soniox,elevenlabs,local-smart-turn-v3]>=0.0.83",
    "pipecatcloud>=0.2.4",
    "websockets>=12.0",
    "elevenlabs>=1.6.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.4.6"
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
